# ecomseller_task

./: README.md  alembic.ini  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 88692d758600_initial_migration.py
src/: main.py  worker.py
src/config/: __init__.py  celery.py  db.py
src/core/: db.py
src/models/: __init__.py  result.py
src/structures/: __init__.py  result.py
src/tasks/: db_write.py
