[tool.poetry]
name = "ecomseller-task"
version = "0.1.0"
description = ""
authors = ["Michael Rodionov <rodionovspb9618@mail.ru>"]
readme = "README.md"
packages = [{include = "ecomseller_task"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
pydantic = "^2.2.0"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.20"
celery = "^5.3.1"
redis = "^5.0.0"
python-dotenv = "^1.0.0"
alembic = "^1.11.3"
psycopg2-binary = "^2.9.7"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
